--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "prisma": "^6.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "slugify": "^1.6.6",
+    "transliteration": "^2.3.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
